argocd/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod
  labels:
    app.kubernetes.io/part-of: cloudops-store
    environment: prod
